# plutus-template

./: LICENSE  README.md  cabal.project  plutus-project.cabal
src/: MyModule.hs
